[package]
name = "rustwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
custom-print= "1.0.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
simple_logger = "5.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
