[package]
name = "rustwasm"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2
debug = false
panic = "abort"

[profile.release]
opt-level = 2
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.25"
once_cell = "1.20.2"

[dependencies.simple-async-local-executor]
version = "0.1.0"
default-features = false



#[dependencies]
#custom-print= "1.0.0"
#log = "0.4.22"
#rlsf = "0.2.1"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.134"
#serde_yaml = "0.9.34"
#simple_logger = "5.0.0"
#tracing = "0.1"
#tracing-subscriber = "0.3"
