[package]
name = "rustwasm"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2
debug = false
panic = "abort"

[profile.release]
opt-level = 2
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-lite = "2.6.0"
log = "0.4.25"
once_cell = "1.20.2"

[dependencies.simple-async-local-executor]
version = "0.1.0"
default-features = false


